2006-04-20  Tim-Philipp Müller  <tim at centricular dot net>

	Patch by: Fabrizio Gennari  <fabrizio dot ge at tiscali dot it>

	* gst/avi/gstavidemux.c: (gst_avi_demux_peek_tag),
	(gst_avi_demux_next_data_buffer), (gst_avi_demux_stream_scan):
	  Fix index creation when we have to scan the file to create
	  an index. There may be other types of RIFF 'LIST' chunks than
	  'movi' and we need to skip them properly as well or we'll end up
	  reading garbage (#336889). Some other cosmetic changes.
	  
2006-04-20  Tim-Philipp Müller  <tim at centricular dot net>

	* ext/flac/gstflacdec.c: (gst_flac_dec_loop),
	(gst_flac_dec_handle_seek_event):
	  Add support for segment seeks (fixes #338290). Also demote
	  some recurring debug message from DEBUG to LOG level.

2006-04-20  Tim-Philipp Müller  <tim at centricular dot net>

	* gst/matroska/matroska-demux.c: (gst_matroska_demux_add_stream),
	(gst_matroskademux_do_index_seek),
	(gst_matroska_demux_handle_seek_event),
	(gst_matroska_demux_parse_blockgroup_or_simpleblock):
	* gst/matroska/matroska-ids.h:
	  Set DISCONT flag on first buffer after a discontinuity.
	  Fix newsegment events sent when seeking and honour KEY_UNIT
	  seek flag. Create pad with bogus caps if we don't recognise
	  the stream codec id.

	* gst/matroska/matroska-demux.h:
	  Fix GObject macros.

2006-04-20  Tim-Philipp Müller  <tim at centricular dot net>

	Patch by: Mark Nauwelaerts  <manauw at skynet dot be>

	* gst/matroska/matroska-demux.c:
	(gst_matroska_demux_handle_seek_event), (gst_matroska_demux_loop):
	  Handle end of segment properly when set; don't dead-lock when
	  posting start of segment message when doing a segment seek.
	  Fixes #338810.

2006-04-20  Tim-Philipp Müller  <tim at centricular dot net>

	* gst/matroska/matroska-demux.c: (gst_matroska_demux_audio_caps),
	(gst_matroska_demux_plugin_init):
	  Make mpeg2 aac audio work: create artificial private codec data
	  chunk which faad2 seems to require, just as we do for mpeg4 aac.